# simplicial_arrangement

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
app/: dual_contouring.cpp  dual_contouring_MI.cpp  generate_material_interface_lookup_table.cpp  generate_simplicial_arrangement_lookup_table.cpp  implicit_arrangement.cpp  implicit_arrangement_util.cpp  implicit_arrangement_util.h  io.h  marching_tet.cpp  material_interface.cpp  mesh_arrangement.cpp  simplex_case_study.cpp  test_lookup_table.cpp
cmake/: Catch2.cmake  absl.cmake  fast_arrangement.cmake  implicit_predicates.cmake  indirect_predicates.cmake  libigl.cmake  nlohmann-json.cmake  spdlog.cmake
data/: iso_mesh.json  iso_mesh_20k.json  iso_mesh_40k.json  iso_mesh_80k.json  marhcing_tet_iso_mesh.json  marhcing_tet_iso_mesh_20k.json  marhcing_tet_iso_mesh_40k.json  marhcing_tet_iso_mesh_80k.json  tet_mesh.json  tet_mesh_10k.json
include/: look_up_table.h
include/simplicial_arrangement/: Arrangement.h  BSPNode.h  DisjointSets.h  SimplicialArrangement.h  common.h  cut.h  extract_arrangement.h  lookup_table.h  material_interface.h  simplicial_arrangement.h
lookup_table/: 1_func_lookup_table.json  2_func_lookup_table.json  material_interface_lookup_table.msgpack  simplicial_arrangement_lookup_table.msgpack  to_check_edge_table.json
scripts/: coverage.sh  scaling.py  scaling.r
src/: ARComplex.h  ArrangementBuilder.h  BSPNode.h  DisjointSets.cpp  DisjointSets.h  MIComplex.h  MaterialInterfaceBuilder.h  MaterialRepo.h  PlaneRepo.h  SimplicialArrangement.h  SimplicialArrangementBuilder.h  add_material.cpp  add_material.h  add_plane.cpp  add_plane.h  ar_cut.h  ar_cut_0_face.h  ar_cut_0_face_predefined.h  ar_cut_1_face.h  ar_cut_2_face.h  ar_cut_3_face.cpp  ar_cut_3_face.h  common.cpp  common.h  consolidate_complex.h  cut.cpp  cut.h  extract_arrangement.cpp  extract_arrangement.h  extract_material_interface.cpp  extract_material_interface.h  extract_unique_materials.h  initialize_simplicial_ar_complex.h  initialize_simplicial_mi_complex.h  look_up_table.cpp  look_up_table.h  lookup_table.cpp  lookup_table_forward_declarations.h  material_interface.cpp  mi_cut.h  (+11 more)
src/PyMesh/: Arrangement.h  FastArrangement.cpp  FastArrangement.h
tests/: benchmark.cpp  robustness.cpp  scaling.cpp  test_ar_cut_0_face.cpp  test_ar_cut_1_face.cpp  test_ar_cut_2_face.cpp  test_ar_cut_3_face.cpp  test_ar_cut_utils.h  test_lookup_table.cpp  test_material_interface.cpp  test_mi_cut_0_face.cpp  test_mi_cut_1_face.cpp  test_mi_cut_2_face.cpp  test_mi_cut_3_face.cpp  test_mi_cut_utils.h  test_simplicial_arrangement.cpp
